# FridaDebugger

./: .gitignore  .gitmodules  README.md  _agent.js  package-lock.json  package.json  prepare.ps1  push.ps1  tsconfig.json
agent/: breakpoint.ts  debugger.ts  index.ts  (+4 more)
agent/plugins/: .gitignore  CMakeLists.txt  CMakePresets.json  buildScript.ps1  include.ts  main.cpp  main.ts
agent/plugins/LIEF/arm64-v8a/include/LIEF/ELF/: enums.hpp
agent/plugins/LIEF/arm64-v8a/share/LIEF/cmake/: LIEFConfig.cmake  LIEFConfigVersion.cmake  LIEFExport-shared-release.cmake  LIEFExport-static.cmake
agent/plugins/LIEF/armeabi-v7a/include/LIEF/ELF/: enums.hpp
agent/plugins/LIEF/armeabi-v7a/lib/pkgconfig/: LIEF.pc
agent/plugins/LIEF/armeabi-v7a/share/LIEF/cmake/: LIEFConfigVersion.cmake  LIEFExport-shared.cmake  LIEFExport-static-release.cmake
agent/plugins/QBDI/: ContextParser.ts  QBDIMain.ts  StructInfo.ts  include.ts
agent/plugins/QBDI/arm64-v8a/share/qbdiAARCH64/: frida-qbdi.js
agent/plugins/QBDI/arm64-v8a/share/qbdiAARCH64/cmake/: QBDIAARCH64Config-release.cmake  QBDIAARCH64Config.cmake  QBDIConfig.cmake
agent/plugins/QBDI/arm64-v8a/share/qbdiAARCH64/qbdi_template/: CMakeLists.txt
agent/plugins/QBDI/armeabi-v7a/include/QBDI/: Config.h  Version.h
agent/plugins/QBDI/armeabi-v7a/share/: frida-qbdi.js
agent/plugins/QBDI/armeabi-v7a/share/cmake/: QBDIARMConfig-release.cmake  QBDIARMConfig.cmake  QBDIConfig-release.cmake  QBDIConfig.cmake
agent/plugins/QBDI/armeabi-v7a/share/qbdi_template/: CMakeLists.txt
agent/plugins/code/: code.cpp  fridaBind.cpp  fridaBind.h
agent/plugins/curl/arm64-v8a/lib/: libcurl.la
agent/plugins/curl/arm64-v8a/lib/pkgconfig/: libcurl.pc
agent/plugins/curl/arm64-v8a/share/man/man1/: curl.1
agent/plugins/curl/arm64-v8a/share/man/man3/: libcurl-symbols.3
agent/plugins/curl/armeabi-v7a/lib/: libcurl.la
agent/plugins/curl/armeabi-v7a/lib/pkgconfig/: libcurl.pc
agent/plugins/keystone/arm64-v8a/kstool/: cmake_install.cmake
agent/plugins/keystone/arm64-v8a/llvm/: cmake_install.cmake
agent/plugins/keystone/arm64-v8a/llvm/include/llvm/Config/: config.h  llvm-config.h
agent/plugins/keystone/arm64-v8a/llvm/include/llvm/Support/: DataTypes.h
agent/plugins/keystone/arm64-v8a/llvm/keystone/: cmake_install.cmake
agent/plugins/keystone/arm64-v8a/llvm/lib/: cmake_install.cmake
agent/plugins/keystone/arm64-v8a/llvm/lib/Support/: cmake_install.cmake
agent/plugins/keystone/arm64-v8a/llvm/tools/llvm-config/: LibraryDependencies.inc
agent/plugins/keystone/arm64-v8a/suite/fuzz/: cmake_install.cmake
agent/plugins/keystone/armeabi-v7a/kstool/: cmake_install.cmake
agent/plugins/keystone/armeabi-v7a/llvm/: LLVMBuild.cmake  cmake_install.cmake
agent/plugins/keystone/armeabi-v7a/llvm/cmake/modules/: cmake_install.cmake
agent/plugins/keystone/armeabi-v7a/llvm/include/llvm/: cmake_install.cmake
agent/plugins/keystone/armeabi-v7a/llvm/keystone/: cmake_install.cmake
agent/plugins/keystone/armeabi-v7a/llvm/lib/: cmake_install.cmake
agent/plugins/keystone/armeabi-v7a/llvm/lib/MC/: cmake_install.cmake
agent/plugins/keystone/armeabi-v7a/llvm/tools/llvm-config/: LibraryDependencies.inc
agent/plugins/openssl/arm64-v8a/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
agent/plugins/openssl/armeabi-v7a/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
(+26 files in other folders)
